welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: ')' expected but ';' found.
  setPos(getMondeHauteur()-1;getMondeHauteur()-1)
                            ^ColumnByColumn:1: error: ';' expected but ')' found.
  setPos(getMondeHauteur()-1;getMondeHauteur()-1)
                                                ^